# mma-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN_DOCUMENT_INFERENCE_DATA.md  Dockerfile  HANDOFF.md  README.md  TRAIN_ARCHITECTURE.md  docker-compose.yml  main.py  predict.py  pyproject.toml  pytest.ini  setup.ps1  setup.sh
config/: ADJPERF_OPTIMIZATION.md  CONFIGURATION_GUIDE.md  README.md  TUNING_SUMMARY.txt  USAGE.md  __init__.py  decay.py  detailed_results.json  optimized_decay.json  optimized_parameters copy.json  optimized_parameters.json  parameters.py
docker/postgres-init/: 01-create-odds.sql
docs/: ANALYTICS_SCHEMA.md  HUGGINGFACE_DATASET.md  LLM_ANALYTICS_SYSTEM_PROMPT_SPEC.md  RELEASE_READINESS.md  calculator_improvements.md  custom_total_calculator_usage.md  engineered_features_smoothing_analysis.md
libs/: bfo_scraper.py  bfo_utils.py  llm_odds.py  odds.py  paths.py  screenshot.py  shap_visualization.py  upcoming_fights.py  visualization.py  wikipedia_scraper.py
libs/feature_store/: README.md  base.py  base_calculator.py  base_layer_calculator.py  calculator_context.py  clean_training_data.py  config.py  core.py  features.py  (+8 more)
scripts/: __init__.py  analyze_adjperf_winsorization.py  analyze_distribution_quality.py  analyze_mad_percentile.py  analyze_optimization_performance.py  analyze_raw_sparsity.py  analyze_tau_impact.py  apply_per_class_params.py  apply_tuning_parameters.py  calculate_time_dec_sdev.py  check_fight_stats_derived.py  check_fight_stats_fe_schema.py  check_jamahal_hill.py  check_kazama_smoothing.py  check_raw_reversals.py  check_sig_str_schema.py  debug_data_query.py  demo_smoothing_improvement.py  diagnose_smoothing.py  docker_smoke.py  espn_scraper.py  evaluate_model.py  find_extreme_fight_contributions.py  find_extreme_stats_2025.py  find_most_interesting_outliers.py  find_top_10_interesting_outliers_2025.py  get_raw_stats_for_blog.py  get_ufc_averages_and_opponent_stats.py  investigate_giga_chikadze_fight.py  investigate_hyder_amil_fight.py  investigate_sparse_stat_mad.py  investigate_usman_reversals.py  notes.txt  query_sparse_mad_actual.py  recalculate_adjperf_no_winsor.py  release_audit.py  review_all_stats.py  scrape_bfo.py  scrape_ufcstats.py  train_dashboard.py  (+7 more)
tests/: .env.example  README.md  __init__.py  requirements-test.txt  test_docker_smoke.py  test_release_audit.py  test_script_database_urls.py  test_setup_scripts.py
tuning/: README.md  adjperf_optimizer.py  comprehensive_likelihood_tuner.py  decay_rate_optimizer.py
(+208 files in other folders)
