[project]
name = "mma-ai"
version = "0.1.0"
description = "Dockerized UFC fight data, training, analytics, and prediction dashboard"
requires-python = ">=3.10,<3.13"
dependencies = [
    # --- Core ---
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    # --- Database ---
    "sqlalchemy>=2.0.0",
    "sqlalchemy-utils>=0.38.0",
    "psycopg2-binary>=2.9.5",
    # --- Machine Learning (AutoGluon is installed manually later) ---
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "catboost>=1.2.8",
    "lightgbm>=4.6.0",
    "xgboost>=2.1.4",
    "torch==2.9.1+rocm6.3",
    "pytorch-triton-rocm",
    "omegaconf>=2.3.0",
    # --- Web & Scraping ---
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "curl-cffi>=0.5.0",
    "lxml>=4.9.0",
    "scrapy>=2.13.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    # --- Visualization ---
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "kaleido==0.2.1",
    # --- Utilities ---
    "fuzzywuzzy>=0.18.0",
    "unidecode>=1.3.0",
    "tqdm>=4.64.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.0.0",
    "pillow>=9.5.0",
    "shap>=0.42.0",
    "optuna>=3.4.0",
    "optuna-dashboard>=0.13.0",
    "tabulate>=0.9.0",
    "python-levenshtein>=0.25.1",
    "autogluon.tabular[mitra,tabicl,tabpfn]>=1.5.0",
    "google-generativeai>=0.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "numba>=0.60.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "predict"]

[tool.setuptools.packages.find]
include = ["config*", "libs*", "scripts*"]

[tool.setuptools.package-data]
"libs.web" = ["static/*"]

# --- COMMANDS ---

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
pytorch-triton-rocm = { index = "pytorch-rocm" }

[project.scripts]
mma-scrape-ufcstats = "scripts.scrape_ufcstats:main"
mma-rebuild-db = "main:cli"
mma-train = "libs.modeling.train:cli"
mma-evaluate = "scripts.evaluate_model:main"
mma-predict = "predict:cli"
mma-web = "libs.web.cli:main"
mma-release-audit = "scripts.release_audit:main"
mma-docker-smoke = "scripts.docker_smoke:main"
